--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ads": "4.4.2",
     "com.unity.analytics": "3.6.12",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.feature.ar": "1.0.0",
     "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.postprocessing": "3.4.0",
@@ -15,7 +16,7 @@
     "com.unity.timeline": "1.6.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.10",
+    "com.unity.xr.arcore": "4.2.10",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
